# csi-bench-SSL

./: .gitignore  MISSION.md  OOD_IMPROVEMENTS.md  README.md  download_dataset.sh  handoff.txt  kaggle_pretrain.ipynb  pyproject.toml  req_base.txt  requirements.txt  test.ipynb  verify_refactor.py  verify_transfer.py
configs/: gentle_finetune.yaml  heavy_dropout.yaml  multitask_config_test.yaml  multitask_transformer.yaml  paper_baseline.yaml  paper_deeper.yaml  paper_low_lr.yaml  paper_regularized.yaml  pretrain.yaml  pretrain_improved.yaml  pretrain_transformer.yaml  small_model.yaml  supervised_config_test.yaml  supervised_ood.yaml  training_config.py  transformer.yaml  transformer_ood.yaml
configs/experiments/: README.md  cpc_baseline.yaml  cpc_coral.yaml  cpc_kitchen_sink.yaml  cpc_manifold_mixup.yaml  cpc_mixup.yaml  cpc_pretrain_overnight.yaml  cpc_sam.yaml  cpc_swa.yaml
dev/: check_all_paths.py  check_collisions.py  check_cols.py  inspect_paths.py  test_dataset_fix.py
engine/: base_trainer.py  cpc_trainer.py  dann_trainer.py  masked_trainer.py  ssl_trainer.py  task_trainer.py  trainer.py
linear_probe/: few_shot_results.csv
load/: collate.py  data_augmentation.py  dataloader.py  dataset.py  pretrain_dataset.py  raw_dataset.py
logs/: pretrain_4905660_0.out  pretrain_4905660_1.out  pretrain_4905660_2.out  pretrain_4905660_3.out  pretrain_4915965_0.out  pretrain_4915965_1.out  pretrain_4915965_2.out  pretrain_4915965_3.out  pretrain_4948358_0.out  pretrain_4948358_1.out  pretrain_4948358_2.out  pretrain_4948358_3.out  pretrain_5001844_0.out  pretrain_5001844_1.out  pretrain_5001844_2.out  pretrain_5001844_3.out  pretrain_5034826_0.out  pretrain_5034826_1.out  pretrain_5034826_2.out  pretrain_5034826_3.out  pretrain_5045384_0.out  pretrain_5045384_1.out  pretrain_5045384_2.out  pretrain_5045384_3.out  pretrain_5050757_1.out  pretrain_5050757_7.out  pretrain_5050757_8.out  probe_5045385_0.out  probe_5045385_1.out  probe_5045385_2.out  probe_5045385_3.out  probe_5050758_0.out  probe_5050758_1.out  probe_5050758_2.out  probe_5050758_3.out  probe_5050758_4.out  probe_5050758_5.out  probe_5050758_6.out  supervised_5050759_0.out  supervised_5050759_1.out
model/: __init__.py  encoders.py  models.py  registry.py  wrappers.py
model/multitask/: __init__.py  models.py
notebooks/: EDA.ipynb  raw_data_EDA.ipynb
notebooks/results/: classification_report_val.csv  training_results.csv
pretext_tasks/: __init__.py  base.py  vqcpc.py
results/BreathingDetection/mlp/: best_performance.json
results/FallDetection/mlp/: best_performance.json
results/MotionSourceRecognition/mlp/: best_performance.json
scripts/: analyze_domain_aware.py  eval_transfer.py  evaluate_ood.py  linear_probe.py  local_runner.py  pretrain.py  run_experiment_trials.py  run_multi_seed.py  run_ood_tasks.py  slurm_linear_probe_sweep.sh  slurm_pretrain_sweep.sh  slurm_supervised_sweep.sh  submit_sweep.sh  train_multitask_adapter.py  train_self_supervised.py  train_ssl.py  train_supervised.py  train_vqcpc.py  verify_framework.py
src/: dataloader.py  dataset.py
utils/: config.py  dstributed.py  labels.py  logging.py  optim.py  sam.py  training.py
wandb/: latest-run
wandb/run-20260314_215850-q3ha16vl/: run-q3ha16vl.wandb
wandb/run-20260314_215850-q3ha16vl/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/wandb/: latest-run
wandb/wandb/run-20260423_063421-gzuo5u6t/: run-gzuo5u6t.wandb
wandb/wandb/run-20260423_063451-6blyaepk/: run-6blyaepk.wandb
wandb/wandb/run-20260423_064936-1uitfpwu/: run-1uitfpwu.wandb
wandb/wandb/run-20260423_073846-u0uk6qdf/: run-u0uk6qdf.wandb
wandb/wandb/run-20260424_104128-gnk2c7oh/: run-gnk2c7oh.wandb
wandb/wandb/run-20260424_110149-d8n6pydy/: run-d8n6pydy.wandb
(+200 files in other folders)
