[project]
dependencies = [
    "numpy>=2.0", 
    "pandas>=2.0", 
    "scipy>=1.10", 
    "scikit-learn>=1.8.0,<2", 
    "h5py>=3.15.1", 
    "matplotlib>=3.10.8", 
    "seaborn>=0.13.2", 
    "ipykernel>=7.2.0", 
    "ipython>=9.10.0", 
    "jupyter-client>=8.8.0", 
    "tqdm>=4.67.3", 
    "pyyaml>=6.0.3,<7",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "wandb>=0.18"
]
name = "csi-bench-SSL"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = [ "linux-64", "osx-arm64"]

[tool.pixi.feature.gpu.system-requirements]
cuda = "12.8"

[tool.pixi.pypi-dependencies]
csi_bench_ssl = { path = ".", editable = true }

[tool.pixi.feature.mps.target.osx.pypi-dependencies]
torch = { version = ">=2.5.1", index = "https://download.pytorch.org/whl/cpu" }
torchvision = { version = ">=0.20.1", index = "https://download.pytorch.org/whl/cpu" }

[tool.pixi.feature.gpu.target.linux.dependencies]
cuda-version = "12.*"
pytorch-gpu = "*"
torchvision = "*"

[tool.pixi.environments]
mps = { features = ["mps"], solve-group = "default" }
default = { features = ["gpu"], solve-group = "default" }

[tool.pixi.dependencies]
jupyter = ">=1.1.1"
ipykernel = ">=7.2.0"
